<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="button">DISPLAY</string>
    <string name="input">Enter something</string>
    <string name="display">Display what user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
</resources>